// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> renders correctly with default option 1`] = `
<DocumentFragment>
  .c4 {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-right: 5px;
}

.c1 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c2 {
  font-size: 15px;
  font-weight: 500;
  word-break: break-word;
}

.c3 {
  font-size: 14px;
  font-weight: 400;
  word-break: break-word;
}

.c0 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

.c0:hover {
  background: rgba(217, 217, 217, 0.2);
}

<div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <p
          class="c2"
        >
          test 2
        </p>
        <p
          class="c3"
        >
          test2
        </p>
      </div>
      <div
        class="c4"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Select /> renders correctly with no options 1`] = `
<DocumentFragment>
  .c0 {
  padding: 13px 13px 13px;
  background: transparent;
  border: 1px solid rgba(226, 221, 255, 0.15);
  color: rgba(226, 221, 255, 0.9);
  margin-bottom: 15px;
  font-size: 12px;
  border-radius: 6px;
  min-height: 35px;
  display: flex;
  align-items: center;
}

.c0:last-child {
  margin-bottom: 0;
}

.c1 {
  display: inline-block;
  margin-right: 10px;
}

<div>
    <p
      class="c0"
    >
      <span
        class="c1"
      >
        <svg
          fill="none"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 9v5M12 21.41H5.94c-3.47 0-4.92-2.48-3.24-5.51l3.12-5.62L8.76 5c1.78-3.21 4.7-3.21 6.48 0l2.94 5.29 3.12 5.62c1.68 3.03.22 5.51-3.24 5.51H12v-.01Z"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <path
            d="M11.995 17h.009"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </span>
      error.noNftsFound
    </p>
  </div>
</DocumentFragment>
`;

exports[`<Select /> renders correctly with option image 1`] = `
<DocumentFragment>
  .c5 {
  width: 42px;
  height: 42px;
  border-radius: 50%;
}

.c4 {
  width: 42px;
}

.c1 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c2 {
  font-size: 15px;
  font-weight: 500;
  word-break: break-word;
}

.c3 {
  font-size: 14px;
  font-weight: 400;
  word-break: break-word;
}

.c0 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

.c0:hover {
  background: rgba(217, 217, 217, 0.2);
}

<div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <p
          class="c2"
        >
          test 1
        </p>
        <p
          class="c3"
        >
          test1
        </p>
      </div>
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <p
          class="c2"
        >
          test 2
        </p>
        <p
          class="c3"
        >
          test2
        </p>
      </div>
    </div>
    <div
      class="c0"
    >
      <div
        class="c4"
      >
        <img
          alt="test 3"
          class="c5"
          src="https://via.placeholder.com/150"
          title="test 3"
        />
      </div>
      <div
        class="c1"
      >
        <p
          class="c2"
        >
          test 3
        </p>
        <p
          class="c3"
        >
          test3
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Select /> renders correctly with selected option image 1`] = `
<DocumentFragment>
  .c2 {
  width: 42px;
  height: 42px;
  border-radius: 50%;
}

.c6 {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-right: 5px;
}

.c1 {
  width: 42px;
}

.c3 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c4 {
  font-size: 15px;
  font-weight: 500;
  word-break: break-word;
}

.c5 {
  font-size: 14px;
  font-weight: 400;
  word-break: break-word;
}

.c0 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

.c0:hover {
  background: rgba(217, 217, 217, 0.2);
}

<div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <img
          alt="test 3"
          class="c2"
          src="https://via.placeholder.com/150"
          title="test 3"
        />
      </div>
      <div
        class="c3"
      >
        <p
          class="c4"
        >
          test 3
        </p>
        <p
          class="c5"
        >
          test3
        </p>
      </div>
      <div
        class="c6"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Select /> renders correctly with some options 1`] = `
<DocumentFragment>
  .c5 {
  width: 42px;
  height: 42px;
  border-radius: 50%;
}

.c4 {
  width: 42px;
}

.c1 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c2 {
  font-size: 15px;
  font-weight: 500;
  word-break: break-word;
}

.c3 {
  font-size: 14px;
  font-weight: 400;
  word-break: break-word;
}

.c0 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

.c0:hover {
  background: rgba(217, 217, 217, 0.2);
}

<div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <p
          class="c2"
        >
          test 1
        </p>
        <p
          class="c3"
        >
          test1
        </p>
      </div>
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <p
          class="c2"
        >
          test 2
        </p>
        <p
          class="c3"
        >
          test2
        </p>
      </div>
    </div>
    <div
      class="c0"
    >
      <div
        class="c4"
      >
        <img
          alt="test 3"
          class="c5"
          src="https://via.placeholder.com/150"
          title="test 3"
        />
      </div>
      <div
        class="c1"
      >
        <p
          class="c2"
        >
          test 3
        </p>
        <p
          class="c3"
        >
          test3
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Select /> responds once clicked 1`] = `
<DocumentFragment>
  .c4 {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-right: 5px;
}

.c1 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c2 {
  font-size: 15px;
  font-weight: 500;
  word-break: break-word;
}

.c3 {
  font-size: 14px;
  font-weight: 400;
  word-break: break-word;
}

.c0 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

.c0:hover {
  background: rgba(217, 217, 217, 0.2);
}

<div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <p
          class="c2"
        >
          test 2
        </p>
        <p
          class="c3"
        >
          test2
        </p>
      </div>
      <div
        class="c4"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Select /> shows loading skeleton on option item where option value is loading 1`] = `
<DocumentFragment>
  .c4 {
  height: 15px;
  width: 30%;
  animation: hLhBjP 1s linear infinite alternate;
  border-radius: 8px;
  margin-bottom: 0;
}

.c6 {
  width: 42px;
  height: 42px;
  border-radius: 50%;
}

.c5 {
  width: 42px;
}

.c1 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c2 {
  font-size: 15px;
  font-weight: 500;
  word-break: break-word;
}

.c3 {
  font-size: 14px;
  font-weight: 400;
  word-break: break-word;
}

.c0 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

.c0:hover {
  background: rgba(217, 217, 217, 0.2);
}

<div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <p
          class="c2"
        >
          test 1
        </p>
        <p
          class="c3"
        >
          test1
        </p>
      </div>
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <p
          class="c2"
        >
          test 2
        </p>
        <div
          class="c4"
        />
      </div>
    </div>
    <div
      class="c0"
    >
      <div
        class="c5"
      >
        <img
          alt="test 3"
          class="c6"
          src="https://via.placeholder.com/150"
          title="test 3"
        />
      </div>
      <div
        class="c1"
      >
        <p
          class="c2"
        >
          test 3
        </p>
        <p
          class="c3"
        >
          test3
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Select /> shows loading skeleton when options loading 1`] = `
<DocumentFragment>
  .c2 {
  height: 42px;
  width: 42px;
  animation: hLhBjP 1s linear infinite alternate;
  border-radius: 50%;
  margin-bottom: 0;
}

.c4 {
  height: 15px;
  width: 80%;
  animation: hLhBjP 1s linear infinite alternate;
  border-radius: 8px;
  margin-bottom: 0;
}

.c5 {
  height: 15px;
  width: 30%;
  animation: hLhBjP 1s linear infinite alternate;
  border-radius: 8px;
  margin-bottom: 0;
}

.c1 {
  width: 42px;
}

.c3 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c0 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      />
      <div
        class="c5"
      />
    </div>
  </div>
</DocumentFragment>
`;
